--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "express-handlebars": "^5.3.2",
     "express-session": "^1.17.2",
     "mysql2": "^2.2.5",
+    "path": "^0.12.7",
     "seed": "^0.4.4",
-    "sequelize": "^6.6.2"
+    "sequelize": "^6.6.2",
+    "serve-favicon": "^2.5.0"
   }
 }
