--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
     "express-session": "^1.17.2",
+    "express-sessions": "^1.0.6",
     "mysql2": "^2.2.5",
+    "node": "^16.4.0",
+    "path": "^0.12.7",
     "seed": "^0.4.4",
     "sequelize": "^6.6.2"
   }
