--- a/package.json
+++ b/package.json
@@ -10,13 +10,12 @@
     "path": "^0.12.7",
     "seed": "^0.4.4",
     "sequelize": "^6.6.2",
-    "serve-favicon": "^2.5.0"  
+    "serve-favicon": "^2.5.0"
   },
-    "scripts": {
+  "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "seed": "node seeds/seed.js",
-    "watch": "nodemon serber.js"
+    "watch": "nodemon server.js"
   }
 }
-
