--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
     "connect-session-sequelize": "^7.1.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
     "express-session": "^1.17.2",
     "express-sessions": "^1.0.6",
+    "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
     "node": "^16.4.0",
     "path": "^0.12.7",
     "seed": "^0.4.4",
-    "sequelize": "^6.6.2",
+    "sequelize": "^6.6.4",
     "serve-favicon": "^2.5.0"
   },
   "scripts": {
