--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "mysql2": "^2.2.5",
     "path": "^0.12.7",
     "seed": "^0.4.4",
-    "sequelize": "^6.6.2",
-    "serve-favicon": "^2.5.0"
+    "sequelize": "^6.6.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
